[fix]修复navigation导致每一次退出搜索框地图重新加载问题

--- a/module_map/src/main/res/values/strings.xml
+++ b/module_map/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="map_search_edit_hint">搜索一个地点…</string>
+    <string name="map_title">掌邮地图</string>
 
 </resources>
