--- a/module_map/src/main/res/values/strings.xml
+++ b/module_map/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="map_place_detail_upload">与大家分享你拍摄的此地点</string>
     <string name="map_place_detail_about">关于该地点</string>
     <string name="map_place_map_view_my_favorite">我的收藏</string>
+    <string name="map_network_connect_error">网络请求失败</string>
     <!--  测试用名称-->
     <string name="map_tag_sport_taiji">太极运动场</string>
     <string name="map_tag_sport_fenghua">风华运动场</string>
