[feature]收藏输入框自定义动画，微调布局

--- a/module_map/src/main/res/values/strings.xml
+++ b/module_map/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="map_favorite_accept">确定</string>
     <string name="map_favorite_recommend_text">推荐</string>
     <string name="map_favorite_cancel_favorite">不再收藏该地点</string>
+    <string name="map_favorite_et_hint">我的收藏</string>
 
 </resources>
