--- a/module_map/src/main/res/values/strings.xml
+++ b/module_map/src/main/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="map_favorite_recommend_text">推荐</string>
     <string name="map_favorite_cancel_favorite">不再收藏该地点</string>
     <string name="map_favorite_et_hint">我的收藏</string>
+    <string name="map_search_history_text">历史记录</string>
+    <string name="map_search_clear_text">清除全部</string>
 
 </resources>
