--- a/module_map/src/main/res/values/strings.xml
+++ b/module_map/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="map_favorite_et_hint">我的收藏</string>
     <string name="map_search_history_text">历史记录</string>
     <string name="map_search_clear_text">清除全部</string>
-
+    <string name="map_all_picture_text">所有图片</string>
+    <string name="map_all_picture_text_no_more">暂无更多图片</string>
 </resources>
