--- a/module_map/src/main/res/values/strings.xml
+++ b/module_map/src/main/res/values/strings.xml
@@ -22,4 +22,9 @@
     <string name="map_cancel_lock">请长按解锁</string>
     <string name="map_favorite_edit_length_not_enough">地点备注不能为空~</string>
     <string name="map_favorite_empty">还未收藏地点哦~</string>
+    <string name="map_search_history_clear_tip">真的要清空搜索记录吗？</string>
+    <string name="map_favorite_delete">是否将该地点从“我的收藏”中移出？</string>
+    <string name="map_share_picture">在这里，和邮子们共同分享你们所拍摄的校园风景。上传你的照片，优质照片有机会在此展示</string>
+    <string name="map_no_permission_store">无权限，请手动打开存储和相机权限</string>
+
 </resources>
