--- a/module_map/src/main/res/values/strings.xml
+++ b/module_map/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="map_place_detail_upload">与大家分享你拍摄的此地点</string>
     <string name="map_place_detail_about">关于该地点</string>
     <string name="map_place_map_view_my_favorite">我的收藏</string>
-    <string name="map_network_connect_error">网络请求失败</string>
+    <string name="map_network_connect_error">服务君似乎打盹了呢~</string>
     <string name="map_favorite_cancel">取消</string>
     <string name="map_favorite_accept">确定</string>
     <string name="map_favorite_cancel_favorite">不再收藏该地点</string>
