--- a/module_map/src/main/res/values/strings.xml
+++ b/module_map/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="map_search_edit_hint">搜索一个地点…</string>
     <string name="map_title">掌邮地图</string>
     <string name="map_place_detail_detail">详情</string>
     <string name="map_place_detail_more">查看更多</string>
@@ -23,8 +22,27 @@
     <string name="map_favorite_empty">还未收藏地点哦~</string>
     <string name="map_search_history_clear_tip">真的要清空搜索记录吗？</string>
     <string name="map_favorite_delete">是否将该地点从“我的收藏”中移出？</string>
+    <string name="map_favorite_delete_title">取消收藏</string>
     <string name="map_share_picture">在这里，和邮子们共同分享你们所拍摄的校园风景。上传你的照片，优质照片有机会在此展示</string>
+    <string name="map_share_picture_title">上传图片</string>
     <string name="map_no_permission_store">无权限，请手动打开存储和相机权限</string>
     <string name="map_download_start">0%</string>
+    <string name="map_collect_success">收藏成功！</string>
+    <string name="map_upload_picture_running">正在上传图片</string>
+    <string name="map_please_a_moment_text">请稍后</string>
+    <string name="map_upload_picture_failed_network">上传失败，网络似乎有问题</string>
+    <string name="map_upload_picture_failed_server">上传失败，服务器错误</string>
+    <string name="map_upload_picture_success_title">上传成功</string>
+    <string name="map_upload_picture_success_content">上传的优质照片如果审核通过了，就可以在这里看到啦~</string>
+    <string name="map_require_permission_tips">访问相册需要权限</string>
+    <string name="map_collect_adding">正在添加收藏</string>
+    <string name="map_collect_cancelling">正在取消收藏</string>
+    <string name="map_search_hint">大家都在搜：</string>
+    <string name="map_search_hint_default_place_name">风雨操场</string>
+    <string name="map_use_local_map_data">使用本地缓存</string>
+    <string name="map_picture_loading">图片加载中</string>
+    <string name="map_map_load_failed">地图加载失败，使用本地缓存</string>
+    <string name="map_please_unlock">取消锁定后对地图进行操作</string>
+
 
 </resources>
