--- a/module_map/src/main/res/values/strings.xml
+++ b/module_map/src/main/res/values/strings.xml
@@ -43,6 +43,9 @@
     <string name="map_picture_loading">图片加载中</string>
     <string name="map_map_load_failed">地图加载失败，使用本地缓存</string>
     <string name="map_please_unlock">取消锁定后对地图进行操作</string>
-
-
+    <string name="map_update_title">地图更新</string>
+    <string name="map_update_message">有最新的地图信息可用，推荐更新获取校内最新的地点信息</string>
+    <string name="map_update_dialog_deny">下次再说</string>
+    <string name="map_update_dialog_sure">立即更新</string>
+    <string name="map_show_picture_fail">图片加载失败</string>
 </resources>
