--- a/module_map/src/main/res/values/strings.xml
+++ b/module_map/src/main/res/values/strings.xml
@@ -50,6 +50,6 @@
     <string name="map_update_dialog_deny">下次再说</string>
     <string name="map_update_dialog_sure">立即更新</string>
     <string name="map_show_picture_fail">图片加载失败</string>
-    <string name="map_open_site_id_null">该地点不存在</string>
+    <string name="map_open_site_id_null">未找到该地点，请手动搜索</string>
 
 </resources>
